--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
       <ul>
         <li><a href="mailto:umutkarakulak@hotmail.com">umutkarakulak@hotmail.com</a></li>
         <li><a href="https://github.com/umutto">github.com/umutto</a></li>
+        <li><a href="http://umutto.github.io/blog/atom.xml>RSS</a></li>
       </ul>
     </footer>
   </body>
