--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,11 +1,11 @@
 <div id="disqus_thread"></div>
 <script>
 
-var disqus_shortname = 'umutto.github.io';
+var disqus_shortname = 'umutto;
 
 (function() {
 var d = document, s = d.createElement('script');
-s.src = 'https://umutto-github-io.disqus.com/embed.js';
+s.src = 'https://umutto.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
