--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script>
 
-var disqus_shortname = 'umutto;
+var disqus_shortname = 'umutto';
 
 (function() {
 var d = document, s = d.createElement('script');
