--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,3 +7,10 @@ layout: default
 <div class="post">
   {{ content }}
 </div>
+
+<br><hr><br>
+
+<!-- Post comments -->
+<div class="notecomments">
+  {% include disqus.html %}	 
+</div>
