--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ nav ul, footer ul {
     list-style: none;
     font-weight: bold;
 }
+footer ul {
+    text-align: right;
+    list-style-position: inside;
+}
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
