--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
       <ul>
         <li><a href="mailto:umutkarakulak@hotmail.com">umutkarakulak@hotmail.com</a></li>
         <li><a href="https://github.com/umutto">github.com/umutto</a></li>
+        <li><a href="https://stackoverflow.com/users/826970/umutto">stackoverflow</a></li>
         <li><a href="http://umutto.github.io/blog/atom.xml">RSS</a></li>
       </ul>
     </footer>
