--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <div class="post">
   <button onclick="scrollWindow(0)" id="btn_top" title="Go to top">TOP</button>
   {{ content }}
-  <script src="/scripts/post.js></script>
+  <script src="/scripts/post.js"></script>
 </div>
 
 <br><hr><br>
